# wayfinder

./: .gitignore  .justfile  CLAUDE.md  Cargo.toml  LICENSE  README.md  tarpaulin.toml
.github/workflows/: check-and-lint.yaml  ci.yml  release.yml  test.yml
crates/waybuilder/: Cargo.toml
crates/waybuilder/src/: lib.rs  main.rs
crates/waybuilder/src/data/: loader.rs  mod.rs  service.rs
crates/waybuilder/src/model/: abilities.rs  character.rs  equipment.rs  feat.rs  mod.rs  proficiencies.rs  spell.rs  types.rs
crates/waybuilder/src/persistence/: export.rs  mod.rs  save.rs
crates/waybuilder/src/ui/: app.rs  convert.rs  events.rs  mod.rs  render.rs
crates/waybuilder/src/ui/modal/: boosts.rs  domain.rs  info.rs  mod.rs  runes.rs  selection.rs  skills.rs  text_input.rs
crates/waybuilder/src/ui/panels/: build_selector.rs  character_info.rs  detail_tabs.rs  mod.rs
crates/waybuilder/src/ui/screens/: character_select.rs  mod.rs
crates/waybuilder/tests/: mechanics_test.rs
crates/waybuilder/tests/fixtures/: Orgor.json  agatha.json  ancient_blooded_dwarf.json  bandit.json  bravery.json  draconic_bloodline.json  dwarf.json  farmhand.json  fighter.json  kaelin.json  phizzlepheather.json  preacher.json  sorcerer.json  weapon_mastery.json  wizard.json
crates/wayfinder/: Cargo.toml
crates/wayfinder-cli/: Cargo.toml  README.md
crates/wayfinder-cli/src/: main.rs
crates/wayfinder-cli/tests/: cli_test.rs
crates/wayfinder-core/: Cargo.toml  README.md
crates/wayfinder-core/src/: error.rs  lib.rs
crates/wayfinder-core/src/aon/: categories.rs  client.rs  mod.rs  models.rs  parse.rs  query.rs
crates/wayfinder-core/src/cache/: store.rs
crates/wayfinder-core/src/render/: colored.rs  content.rs  markdown.rs  mod.rs  terminal.rs
crates/wayfinder-core/src/search/: mod.rs  results.rs  service.rs
crates/wayfinder-core/tests/: cache_test.rs  categories_test.rs  client_test.rs  colored_test.rs  content_test.rs  markdown_test.rs  models_test.rs  parse_test.rs  query_test.rs  results_test.rs  retry_test.rs  search_test.rs  terminal_test.rs
crates/wayfinder-mcp/: Cargo.toml  README.md
crates/wayfinder-mcp/src/: format.rs  main.rs  params.rs  query.rs  server.rs
crates/wayfinder-mcp/tests/: mcp_test.rs
crates/wayfinder/src/: main.rs
docs/: mcp-setup.md
