[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Jacob Heider <jhheider@gmail.com>"]
repository = "https://github.com/jhheider/wayfinder"
license = "MIT"

[workspace.dependencies]
wayfinder-core = { path = "crates/wayfinder-core" }
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls-no-provider"] }
# ring provider, not rustls's default aws-lc-rs (external cmake build, huge tree)
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.51.0", features = ["full"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
clap = { version = "4.5.60", features = ["derive"] }
anyhow = "1.0.103"
colored = "3.1.1"
dirs = "6.0.0"
html-escape = "0.2.13"
indexmap = "2"
