[package]
name = "waybuilder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "TUI character builder for Pathfinder 2e"

[lib]
name = "waybuilder"
path = "src/lib.rs"

[[bin]]
name = "wb"
path = "src/main.rs"

[dependencies]
wayfinder-core = { workspace = true }
ratatui = { workspace = true }
crossterm = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }
dirs.workspace = true
thiserror = "2.0.18"
