[package]
name = "wayfinder-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for querying, caching, and browsing Pathfinder 2e game data"

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
anyhow = { workspace = true }
html-escape = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }

[dev-dependencies]
tempfile = "3.24.0"
