[package]
name = "wayfinder-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "Client, cache, search, and rendering for Archives of Nethys Pathfinder 2e / Starfinder 2e data"
readme = "README.md"
keywords = ["pathfinder", "starfinder", "ttrpg", "nethys", "elasticsearch"]
categories = ["api-bindings", "caching", "game-development"]

[dependencies]
reqwest = { workspace = true }
rustls = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rusqlite = { workspace = true }
html-escape = { workspace = true }
indexmap = { workspace = true }
colored = { workspace = true }
thiserror = "2.0.18"

[dev-dependencies]
tempfile = "3.26.0"
