[package]
name = "wayfinder-mcp"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
license.workspace = true
description = "MCP server exposing Archives of Nethys Pathfinder 2e / Starfinder 2e data to LLM tools"
readme = "README.md"
keywords = ["pathfinder", "starfinder", "mcp", "nethys", "llm"]
categories = ["command-line-utilities", "api-bindings"]

[[bin]]
name = "wayfinder-mcp"
path = "src/main.rs"

[dependencies]
wayfinder-core = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
rmcp = { version = "2.2.0", features = ["server", "macros", "transport-io"] }
schemars = "1.2.1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
clap = { workspace = true, features = ["derive"] }
