[package]
name = "wayfinder"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for searching and browsing Pathfinder 2e data from Archives of Nethys"

[[bin]]
name = "wf"
path = "src/main.rs"

[dependencies]
wayfinder-core = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
dirs = { workspace = true }
colored = { workspace = true }
serde.workspace = true
